--- a/popup.html
+++ b/popup.html
@@ -104,10 +104,17 @@
 			border: 1px solid #e2e2e2;
 			width: 298px;
 			outline: none;
-			display: block;
 			margin: auto;
 			margin-top: 10px;
+			transition: transform 200ms linear;
 		}
+
+		.hiden{
+			display: none;
+			pointer-events: none;
+			transform: translateY(50px);
+		}
+
 	</style>
 </head>
 <body>
@@ -130,7 +137,7 @@
 			
 	
 	
-		<textarea id="wrdlst1" placeholder="Press the desired key" rows="1"></textarea>
+		<textarea class="hiden" id="wrdlst1" placeholder="Press the desired key" rows="1"></textarea>
 	</div>
 	
 	<script src="js/popup.js"></script>
